deploy/k8s/base/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: __NAMESPACE__
  labels:
    app.kubernetes.io/name: fotosintesis
    app.kubernetes.io/part-of: fotosintesis-ai
